--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ parallel-jobs = 1
 [Tiktok]
 apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
 included-patches = "'SIM spoof'"
+build-mode = "module"
 
 [YouTube]
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
@@ -15,3 +16,4 @@ patches-source = "inotia00/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 integrations-source = "inotia00/revanced-integrations"
 rv-brand = "ReVanced Extended"
+build-mode = "module"
